<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">门诊医生排班</string>
    <string name="bt_key_erro">验证码错误！</string>
    <string name="bt_key_sending">发送验证码</string>
    <string name="bt_pwd_succ_found">密码重置成功！</string>
    <string name="pwd_erro">密码有误！</string>
    <string name="pwd_forgot">重置密码</string>
    <string name="pwd_found1">新密码</string>
    <string name="pwd_found2">重新输入新密码</string>
    <string name="pwd_found_phone">您的手机号码</string>
    <string name="pwd_n_same">前后密码不一致！</string>
    <string name="si_title">门诊医生排班</string>
    <string name="sign_in">登录</string>
    <string name="sign_up">注册</string>
    <string name="sin_choosing1">科管</string>
    <string name="sin_choosing2">门诊办</string>
    <string name="sin_phone">手机号</string>
    <string name="sup_key">输入验证码</string>
    <string name="sup_phone">请输入有效的手机号码</string>
    <string name="sup_phone_enrolled">手机号码已被注册！</string>
    <string name="sup_phone_erro">手机号码格式有误</string>
    <string name="sup_pwd1">输入您的密码</string>
    <string name="sup_pwd2">再次输入您的密码</string>
    <string name="u_pwd">密 码</string>
    <string name="start_using">开始使用</string>
    <string name="netloading">加载中……</string>
    <string name="ptr_pull">下拉刷新</string>
    <string name="ptr_release">释放刷新</string>
    <string name="ptr_loading">正在刷新</string>
    <string name="ptr_complete">加载完成</string>
    <string name="ptr_failure">刷新失败</string>
    <string name="main_yuyue">预约</string>
    <string name="main_muban">模板</string>
    <string name="main_zidongpaiban">排班</string>
    <string name="main_fuhe">复核</string>
    <string name="main_personal">我的</string>
    <string name="cancel">取消</string>
    <string name="calender_choosing">选择时间或日期</string>
    <string name="ensure">确定</string>
    <string name="back">返回</string>
    <string name="paizhaoshangchuan">拍照上传</string>
    <string name="xiang_ce_xuan_ze">相册选择</string>
    <string name="net_connecting_erro">客官，你的网络连接有问题哦^_^</string>
    <string name="yuyue_spinner_tv">更换科室</string>
    <string name="yuyue_date_tv">预约查询(点击选择日期)</string>
    <string name="yuyue_date_range_tv">当前预约有效期:</string>
    <string name="yuyue_start_tv">开始预约时间:</string>
    <string name="yuyue_end_tv">结束预约时间:</string>
    <string name="yuyue_allowing_tv">允许预约天数:</string>
    <string name="yuyue_previous_tv">可提前预约天数:</string>
    <string name="yuyue_default_tv">系统最大违约次数:</string>
    <string name="yuyue_submit">提交修改</string>
    <string name="yuyue_reset">清空</string>
    <string name="yuyue_modify_confirm">保存</string>
    <string name="bt_add">增加</string>
    <string name="bt_update">编辑</string>
    <string name="bt_delete">删除</string>
    <string name="muban_casual_day">工作日</string>
    <string name="muban_workday">休息日</string>
    <string name="muban_details_diagnose_am">上午是否开诊:</string>
    <string name="muban_details_start_am">上午开始时间:</string>
    <string name="muban_details_end_am">上午结束时间:</string>
    <string name="muban_details_amount_am">上午放号量:</string>
    <string name="muban_details_time_eachone">单个放号量时间:</string>
    <string name="muban_details_diagnose_pm">下午是否开诊:</string>
    <string name="muban_details_start_pm">下午开始时间:</string>
    <string name="muban_details_end_pm">下午结束时间:</string>
    <string name="muban_details_amount_pm">下午放号量:</string>
    <string name="muban_details_update_delete_title">温馨提示</string>
    <string name="muban_details_update_delete_content">删除后出诊信息将不再展示</string>
    <string name="paiban_details_stopping">申请停诊</string>
    <string name="fuhe_doctor_diagnose">排班复核</string>
    <string name="fuhe_doctor_not_diagnose">停诊复核</string>



</resources>
