<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="48dp">
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/div_line_vertical"/>
        <RadioGroup
            android:id="@+id/main_radiogroup"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:paddingTop="5dp"
            android:layout_height="match_parent">
        <RadioButton
            android:id="@+id/yuyue_main"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:checked="true"
            android:button="@null"
            android:text="@string/main_yuyue"
            android:layout_weight="1"
            android:gravity="center" />
        <RadioButton
            android:id="@+id/muban_main"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:checked="true"
            android:button="@null"
            android:text="@string/main_muban"
            android:gravity="center" />
        <RadioButton
            android:id="@+id/paiban_main"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:checked="true"
            android:button="@null"
            android:text="@string/main_zidongpaiban"

            android:gravity="center" />
        <RadioButton
            android:id="@+id/fuhe_main"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="40dp"

            android:layout_gravity="center"
            android:checked="true"
            android:button="@null"
            android:text="@string/main_fuhe"

            android:gravity="center" />
        <RadioButton
            android:layout_weight="1"
            android:id="@+id/personal_main"
            android:layout_width="0dp"
            android:layout_height="40dp"

            android:layout_gravity="center"
            android:checked="true"
            android:button="@null"
            android:text="@string/main_personal"
            android:gravity="center" />
        </RadioGroup>
    </LinearLayout>



</FrameLayout>