<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginLeft="48dp"
    android:layout_marginRight="48dp"
    android:layout_gravity="center_horizontal">

    <TextView
        android:id="@+id/paizhao"
        android:text="@string/paizhaoshangchuan"
        android:gravity="center"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <View
        android:layout_width="match_parent"
        android:background="@drawable/div_line_vertical_light_dark"
        android:layout_height="1dp"/>

    <TextView
        android:id="@+id/xiangce"
        android:text="@string/xiang_ce_xuan_ze"
        android:gravity="center"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <View
        android:layout_width="match_parent"
        android:background="@drawable/div_line_vertical_light_dark"
        android:layout_height="1dp"/>

    <TextView
        android:id="@+id/quxiao"
        android:textColor="@color/white"
        android:text="@string/cancel"
        android:gravity="center"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
</LinearLayout>