<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    >
    <!--111111111111111111111-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/yuyue_spinner_tv"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/yuyue_spinner"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/yuyue_spinner" />

    <Spinner
        android:id="@+id/yuyue_spinner"
        style="@null"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:padding="12dp"
        app:layout_constraintBottom_toBottomOf="@+id/yuyue_view1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/yuyue_view1"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@drawable/div_line_vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yuyue_spinner" />
    <!--222222222222222222-->
    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/yuyue_date_tv"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/yuyue_date_choosing"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/yuyue_date_choosing" />

    <TextView
        android:id="@+id/yuyue_date_choosing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center"
        android:padding="16dp"
        android:text="2017-3-13"
        android:textColor="@color/green"
        android:textSize="16sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yuyue_view1" />

    <View
        android:id="@+id/yuyue_view2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@drawable/div_line_vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yuyue_date_choosing" />

    <RadioGroup
        android:id="@+id/yuyue_bar"
        android:layout_width="0dp"
        android:visibility="gone"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yuyue_view2">

        <RadioButton
            android:id="@+id/yuyue_add"
            android:button="@null"
            android:layout_width="0dp"
            android:textSize="16sp"
            android:checked="true"
            android:text="@string/bt_add"
            android:textColor="@color/yuyue_bar_text_color"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center" />

        <RadioButton
            android:id="@+id/yuyue_update"
            android:button="@null"
            android:layout_width="0dp"
            android:gravity="center"
            android:textColor="@color/yuyue_bar_text_color"
            android:textSize="16sp"
            android:text="@string/bt_update"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <RadioButton
            android:id="@+id/yuyue_delete"
            android:layout_width="0dp"
            android:gravity="center"
            android:button="@null"
            android:textColor="@color/yuyue_bar_text_color"
            android:textSize="16sp"
            android:text="@string/bt_delete"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </RadioGroup>
    <View
        android:id="@+id/yuyue_view3"
        android:layout_width="0dp"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@+id/yuyue_bar"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="@drawable/div_line_vertical"/>
     <android.support.constraint.ConstraintLayout
         android:id="@+id/yuyue_info"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="4dp"
         android:layout_marginBottom="8dp"
         android:background="@drawable/bg_dark_radius"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/yuyue_view3"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintVertical_bias="0.100000024">
         <TextView
             android:id="@+id/textView3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:padding="12dp"
             android:text="@string/yuyue_start_tv"
             android:textColor="@color/white"
             android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="@+id/yuyue_start_time"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="@+id/yuyue_start_time" />

         <TextView
             android:id="@+id/textView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:padding="12dp"
             android:text="@string/yuyue_end_tv"
             android:textColor="@color/white"
             android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="@+id/yuyue_end_time"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="@+id/yuyue_end_time" />

         <TextView
             android:id="@+id/yuyue_textviwe3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:padding="12dp"
             android:text="@string/yuyue_allowing_tv"
             android:textColor="@color/white"
             android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="@+id/yuyue_allowing_days"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="@+id/yuyue_allowing_days" />

         <TextView
             android:id="@+id/yuyue_textviwe4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:padding="12dp"
             app:layout_constraintTop_toTopOf="@+id/yuyue_textviwe3"
             app:layout_constraintBottom_toBottomOf="@+id/yuyue_textviwe3"
             app:layout_constraintLeft_toRightOf="@+id/yuyue_allowing_days"
             android:text="@string/yuyue_previous_tv"
             android:textColor="@color/white"
             android:textSize="16sp" />

         <TextView
             android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:padding="12dp"
             android:text="@string/yuyue_default_tv"
             android:textColor="@color/white"
             android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="@+id/yuyue_default_times"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="@+id/yuyue_default_times" />
         <!--编辑框-->
         <EditText
             android:id="@+id/yuyue_start_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@null"
             android:gravity="center"
             android:maxLines="1"
             android:paddingBottom="12dp"
             android:paddingLeft="24dp"
             android:paddingTop="12dp"
             android:text="08:00"
             android:textColor="@color/green"
             android:textSize="16sp"
             app:layout_constraintLeft_toRightOf="@+id/textView3"
             app:layout_constraintTop_toBottomOf="@+id/yuyue_date_range" />

         <EditText
             android:id="@+id/yuyue_end_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@null"
             android:gravity="center"
             android:maxLines="1"
             android:paddingBottom="12dp"
             android:paddingLeft="24dp"
             android:paddingTop="12dp"
             android:text="22:00"
             android:textColor="@color/green"
             android:textSize="16sp"
             app:layout_constraintLeft_toRightOf="@+id/textView2"
             app:layout_constraintTop_toBottomOf="@+id/yuyue_start_time" />

         <EditText
             android:id="@+id/yuyue_allowing_days"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@null"
             android:gravity="center"
             android:maxLines="1"
             android:padding="12dp"
             android:text="7"
             android:textColor="@color/green"
             android:textSize="16sp"
             app:layout_constraintLeft_toRightOf="@+id/yuyue_textviwe3"
             app:layout_constraintTop_toBottomOf="@+id/yuyue_end_time" />

         <EditText
             android:id="@+id/yuyue_previous_days"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@null"
             android:gravity="center"
             android:maxLines="1"
            android:padding="12dp"
             android:text="4"
             android:textColor="@color/green"
             android:textSize="16sp"
             app:layout_constraintLeft_toRightOf="@+id/yuyue_textviwe4"
             app:layout_constraintTop_toBottomOf="@+id/yuyue_end_time" />

         <EditText
             android:id="@+id/yuyue_default_times"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@null"
             android:gravity="center"
             android:maxLines="1"
             android:padding="12dp"
             android:text="3"
             android:textColor="@color/green"
             android:textSize="16sp"
             app:layout_constraintLeft_toRightOf="@+id/textView"
             app:layout_constraintTop_toBottomOf="@+id/yuyue_previous_days" />
         <android.support.constraint.Guideline
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:id="@+id/guideline"
             app:layout_constraintGuide_percent="0.5"
             android:orientation="vertical"
             tools:layout_editor_absoluteX="0dp"
             tools:layout_editor_absoluteY="0dp" />

         <Button
             android:text="@string/yuyue_submit"
             android:layout_height="wrap_content"
             android:id="@+id/yuyue_bt1"
             android:padding="16dp"
             android:textSize="16sp"
             android:visibility="gone"
             android:textColor="@color/green"
             android:background="@drawable/bt_submit"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_width="0dp"
             app:layout_constraintLeft_toLeftOf="@+id/guideline" />
         <Button
             android:text="更改"
             android:layout_height="wrap_content"
             android:id="@+id/yuyue_bt2"
             android:padding="16dp"
             android:textSize="16sp"
             android:visibility="gone"
             android:textColor="@color/red"
             android:background="@drawable/bt_modify"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="@+id/guideline"
             android:layout_width="0dp"
             app:layout_constraintRight_toLeftOf="@+id/guideline" />

         <Button
             android:text="@string/yuyue_reset"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:id="@+id/yuyue_bt3"
             android:visibility="gone"
             app:layout_constraintRight_toLeftOf="@+id/guideline"
             android:padding="16dp"
             android:textColor="@color/white"
             android:background="@drawable/bt_signup"
             android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent" />
         <TextView
             android:id="@+id/yuyue_operator_hint"
             android:layout_width="0dp"
             android:gravity="center"
             android:visibility="gone"
             android:text="点击各选项进行编辑修改"
             android:textColor="@color/gray"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_height="wrap_content" />
<!--1111111111111111111111111预约有效期11111111111111111111111111111-->
         <TextView
             android:text="@string/yuyue_date_range_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="16sp"
             android:gravity="center"
             android:textColor="@color/white"
             android:padding="12dp"
             android:id="@+id/yuyue_date_range"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginTop="12dp" />

         <TextView
             android:text="2017-3-14"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/yuyue_date_range1"
             android:gravity="center"
             android:textColor="@color/green"
             android:textSize="16sp"
             android:padding="12dp"
             app:layout_constraintTop_toTopOf="@+id/yuyue_date_range"
             app:layout_constraintBottom_toBottomOf="@+id/yuyue_date_range"
             app:layout_constraintLeft_toRightOf="@+id/yuyue_date_range"
      />

         <TextView
             android:text="~"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/yuyue_textView3"
             android:gravity="center"
             android:textSize="16sp"
             android:textColor="@color/white"
             app:layout_constraintTop_toTopOf="@+id/yuyue_date_range"
             app:layout_constraintBottom_toBottomOf="@+id/yuyue_date_range"
             app:layout_constraintLeft_toRightOf="@+id/yuyue_date_range1" />
         <TextView
             android:text="2017-3-14"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/yuyue_date_range2"
             android:gravity="center"
             android:textColor="@color/green"
             android:textSize="16sp"
             android:padding="12dp"
             app:layout_constraintTop_toTopOf="@+id/yuyue_date_range"
             app:layout_constraintBottom_toBottomOf="@+id/yuyue_date_range"
             app:layout_constraintLeft_toRightOf="@+id/yuyue_textView3"
             />
     </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>
