<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
<ImageView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/div_line_vertical"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/yuyue_main"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/yuyue_main_imgview"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:checked="false"
                android:button="@null"
                android:background="@drawable/yuyue"
                android:layout_marginTop="6dp"
                android:gravity="center" />

            <TextView
                android:id="@+id/yuyue_main_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="6dp"
                android:text="@string/main_yuyue"
                android:textSize="14dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/muban_main"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/muban_main_imgview"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@drawable/muban"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:button="@null"
                android:gravity="center" />

            <TextView
                android:id="@+id/muban_main_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="6dp"
                android:text="@string/main_muban"
                android:textSize="14dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fuhe_main"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/fuhe_main_imgview"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:button="@null"
                android:background="@drawable/fuhe"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:gravity="center" />

            <TextView
                android:id="@+id/fuhe_main_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="6dp"
                android:text="@string/main_fuhe"
                android:textSize="14dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/paiban_main"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/zidongpaiban_main_imgview"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:background="@drawable/paiban"
                android:button="@null"
                android:layout_marginTop="8dp"
                android:gravity="center" />

            <TextView
                android:id="@+id/zidongpaiban_main_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="6dp"
                android:text="@string/main_zidongpaiban"
                android:textSize="14dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fabu_main"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/fabu_main_imgview"
                android:layout_width="24dp"
                android:button="@null"
                android:background="@drawable/fabu"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:gravity="center" />

            <TextView
                android:id="@+id/fabu_main_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="6dp"
                android:text="@string/main_fabu"
                android:textSize="14dp" />
        </LinearLayout>

    </LinearLayout>

</FrameLayout>